--- a/src/App.css
+++ b/src/App.css
@@ -76,3 +76,21 @@
   background-color: orange;
   margin-top: 20px;
 }
+
+.details-container {
+  width: 70%;
+  margin: 0 auto;
+  display: flex;
+  border: 1px solid gray;
+}
+
+.post-image {
+  width: 70%;
+  height: 600px;
+  flex: 1;
+}
+
+.comments-section {
+  width: 30%;
+  flex: 0;
+}
