--- a/src/App.css
+++ b/src/App.css
@@ -9,8 +9,17 @@
   padding: 0;
 }
 
+.main-container {
+  display: flex;
+  width: 65%;
+  margin: 0 auto;
+}
+
+.main-container-content {
+  flex: 0.7;
+}
+
 .stories-container {
-  width: 70%;
   display: flex;
   justify-content: space-around;
   margin: 0 auto;
@@ -19,8 +28,8 @@
 }
 
 .posts-container {
-  width: 70%;
-  margin: 0 auto;
+  /* width: 70%; */
+  /* margin: 0 auto; */
 }
 
 .post {
@@ -185,4 +194,130 @@
   border: 1px solid gray;
   border-radius: 50%;
   float: left;
+}
+
+.aside {
+  flex: 0.3;
+  margin-left: 1rem;
+}
+
+.aside-profile {
+  display: flex;
+  padding: 1rem;
+}
+
+.aside-profile-img {
+  width: 4rem;
+  border: 1px solid gray;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+
+.aside-profile-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 0.9rem;
+}
+
+.aside-suggestions-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.aside-suggestions-body {
+  margin-bottom: 1rem;
+}
+
+.aside-suggestions-item {
+  display: flex;
+  align-items: center;
+  padding-left: 1rem;
+  margin-bottom: 0.5rem;
+}
+
+.aside-suggestions-img {
+  width: 2.5rem;
+  border: 1px solid gray;
+  border-radius: 50%;
+  margin-right: 0.7rem;
+}
+
+.aside-suggestions-content {
+  font-size: 0.85rem;
+}
+
+.aside-follow-user {
+  font-size: 0.8rem;
+}
+
+.user-profile-container {
+  width: 65%;
+  margin: 0 auto;
+}
+
+.user-profile-header {
+  display: flex;
+}
+
+.user-profile-img-container {
+  height: 150px;
+  flex: 0.3;
+  display: flex;
+  justify-content: center;
+}
+
+.user-profile-img {
+  height: 100%;
+  border: 1px solid gray;
+  border-radius: 50%;
+}
+
+.user-profile-information {
+  flex: 0.7;
+  margin-left: 1.5rem;
+}
+
+.user-profile-information-content {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.user-profile-information-content > p {
+  margin-right: 2.5rem;
+  margin-bottom: 0;
+}
+
+.user-profile-edit-button {
+  height: 2rem;
+  margin: 0 1rem;
+  font-weight: 600;
+  border: 1px solid gray;
+  border-radius: 0.3rem;
+}
+
+.user-profile-settings {
+  font-size: 1.7rem;
+  cursor: pointer;
+}
+
+.user-profile-navbar {
+  display: flex;
+  justify-content: center;
+}
+
+.user-profile-navbar > a {
+  display: flex;
+  align-items: center;
+  margin-left: 1rem;
+  border-top: 1px solid black;
+  text-transform: uppercase;
+  color: black;
+}
+
+.user-profile-navbar-icon {
+  margin-right: 0.5rem;
 }
