--- a/src/App.css
+++ b/src/App.css
@@ -27,11 +27,6 @@
   margin-bottom: 1.6rem;
 }
 
-.posts-container {
-  /* width: 70%; */
-  /* margin: 0 auto; */
-}
-
 .post {
   border: 1px solid gray;
 }
@@ -260,6 +255,7 @@
 
 .user-profile-header {
   display: flex;
+  margin-bottom: 3rem;
 }
 
 .user-profile-img-container {
@@ -273,6 +269,7 @@
   height: 100%;
   border: 1px solid gray;
   border-radius: 50%;
+  cursor: pointer;
 }
 
 .user-profile-information {
@@ -307,17 +304,85 @@
 .user-profile-navbar {
   display: flex;
   justify-content: center;
+  border-top: 1px solid lightgray;
 }
 
 .user-profile-navbar > a {
   display: flex;
   align-items: center;
-  margin-left: 1rem;
-  border-top: 1px solid black;
+  margin-left: 3rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   text-transform: uppercase;
-  color: black;
+  color: gray;
+  font-weight: 600;
+  font-size: 0.8rem;
+}
+
+.profile-navbar-active {
+  border-top: 1px solid black;
+}
+
+.user-profile-navbar > a:link {
+  text-decoration: none;
 }
 
 .user-profile-navbar-icon {
   margin-right: 0.5rem;
+}
+
+.user-profile-activities {
+  display: flex;
+}
+
+.user-profile-activities > img {
+  width: 40%;
+}
+
+.user-profile-activities-content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.user-profile-buttons {
+  display: flex;
+  justify-content: center;
+  width: 60%;
+  margin-top: 0.5rem;
+}
+
+.user-profile-buttons img {
+  width: 9rem;
+  margin-left: 0.5rem;
+}
+
+.user-profile-footer {
+  margin-top: 1rem;
+  padding: 1rem;
+  text-align: center;
+}
+
+.profile-channel-icon-container {
+  width: 4rem;
+  height: 4rem;
+  padding: 1rem;
+  margin-bottom: 2rem;
+  border: 2px solid #555;
+  border-radius: 50%;
+}
+
+.profile-channel-icon {
+  width: 100%;
+  height: 100%;
+}
+
+.profile-channel-button {
+  padding: 0.2rem 1.7rem;
+}
+
+.profile-header-modal-title {
+  margin-left: 30%;
 }
