--- a/src/App.css
+++ b/src/App.css
@@ -9,18 +9,22 @@
   padding: 0;
 }
 
+.main-container {
+  display: flex;
+  width: 65%;
+  margin: 0 auto;
+}
+
+.main-container-content {
+  flex: 0.7;
+}
+
 .stories-container {
-  width: 70%;
   display: flex;
   justify-content: space-around;
   margin: 0 auto;
   border: 1px solid gray;
   margin-bottom: 1.6rem;
-}
-
-.posts-container {
-  width: 70%;
-  margin: 0 auto;
 }
 
 .post {
@@ -185,4 +189,200 @@
   border: 1px solid gray;
   border-radius: 50%;
   float: left;
+}
+
+.aside {
+  flex: 0.3;
+  margin-left: 1rem;
+}
+
+.aside-profile {
+  display: flex;
+  padding: 1rem;
+}
+
+.aside-profile-img {
+  width: 4rem;
+  border: 1px solid gray;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+
+.aside-profile-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 0.9rem;
+}
+
+.aside-suggestions-header {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.aside-suggestions-body {
+  margin-bottom: 1rem;
+}
+
+.aside-suggestions-item {
+  display: flex;
+  align-items: center;
+  padding-left: 1rem;
+  margin-bottom: 0.5rem;
+}
+
+.aside-suggestions-img {
+  width: 2.5rem;
+  border: 1px solid gray;
+  border-radius: 50%;
+  margin-right: 0.7rem;
+}
+
+.aside-suggestions-content {
+  font-size: 0.85rem;
+}
+
+.aside-follow-user {
+  font-size: 0.8rem;
+}
+
+.user-profile-container {
+  width: 65%;
+  margin: 0 auto;
+}
+
+.user-profile-header {
+  display: flex;
+  margin-bottom: 3rem;
+}
+
+.user-profile-img-container {
+  height: 150px;
+  flex: 0.3;
+  display: flex;
+  justify-content: center;
+}
+
+.user-profile-img {
+  height: 100%;
+  border: 1px solid gray;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.user-profile-information {
+  flex: 0.7;
+  margin-left: 1.5rem;
+}
+
+.user-profile-information-content {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.user-profile-information-content > p {
+  margin-right: 2.5rem;
+  margin-bottom: 0;
+}
+
+.user-profile-edit-button {
+  height: 2rem;
+  margin: 0 1rem;
+  font-weight: 600;
+  border: 1px solid gray;
+  border-radius: 0.3rem;
+}
+
+.user-profile-settings {
+  font-size: 1.7rem;
+  cursor: pointer;
+}
+
+.user-profile-navbar {
+  display: flex;
+  justify-content: center;
+  border-top: 1px solid lightgray;
+}
+
+.user-profile-navbar > a {
+  display: flex;
+  align-items: center;
+  margin-left: 3rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  text-transform: uppercase;
+  color: gray;
+  font-weight: 600;
+  font-size: 0.8rem;
+}
+
+.profile-navbar-active {
+  border-top: 1px solid black;
+}
+
+.user-profile-navbar > a:link {
+  text-decoration: none;
+}
+
+.user-profile-navbar-icon {
+  margin-right: 0.5rem;
+}
+
+.user-profile-activities {
+  display: flex;
+}
+
+.user-profile-activities > img {
+  width: 40%;
+}
+
+.user-profile-activities-content {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.user-profile-buttons {
+  display: flex;
+  justify-content: center;
+  width: 60%;
+  margin-top: 0.5rem;
+}
+
+.user-profile-buttons img {
+  width: 9rem;
+  margin-left: 0.5rem;
+}
+
+.user-profile-footer {
+  margin-top: 1rem;
+  padding: 1rem;
+  text-align: center;
+}
+
+.profile-channel-icon-container {
+  width: 4rem;
+  height: 4rem;
+  padding: 1rem;
+  margin-bottom: 2rem;
+  border: 2px solid #555;
+  border-radius: 50%;
+}
+
+.profile-channel-icon {
+  width: 100%;
+  height: 100%;
+}
+
+.profile-channel-button {
+  padding: 0.2rem 1.7rem;
+}
+
+.profile-header-modal-title {
+  margin-left: 30%;
 }
