--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@
 
 .card-header-img {
   width: 2.5rem;
-  height: 100%;
+  height: 2.5rem;
   margin-right: 0.5rem;
   border: 2px solid rgb(214, 5, 5);
   border-radius: 50%;
@@ -231,6 +231,7 @@
 
 .aside-profile-img {
   width: 4rem;
+  height: 4rem;
   border: 1px solid gray;
   border-radius: 50%;
   margin-right: 1rem;
