--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,7 @@
 .navbar-profile-img {
   width: 30px;
   height: 30px;
-  padding: 0.1rem;
-  border: 1px solid black;
+  border: 1px solid lightgray;
   border-radius: 50%;
 }
 
@@ -551,6 +550,7 @@
 .profile-saved-img-container {
   display: flex;
   flex-wrap: wrap;
+  width: 100%;
 }
 
 .profile-posts-img-div,
