--- a/src/App.css
+++ b/src/App.css
@@ -486,7 +486,11 @@
 .register-container,
 .login-container {
   width: 70%;
+  height: 100vh;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .register-section,
