--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,6 @@
 @import "base/reset";
 @import "base/typography";
 
-@import "layout/navigations";
+@import "layout/navigation";
 
 @import "components/buttons";
